test/spec_vectors/call/fail/module_2.wat
(module (func $type-num-vs-num (i32.eqz (call 1))) (func (result i64) (i64.const 1)))